Intro paragraph, changed margin

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<header>
+					<header style="margin: 0px 100px;">
 						<p><i>
 							The Solar Era is marked by an asteroid impact so powerful it stopped the Earth's core. Forced to flee a thinning atmosphere humanity spread out amongst the planets. Over centuries our species evolved. Strange, new empires rose. A fragile peace has existed for a thousand years, but now old rivalries, new species, and the truth behind a mysterious black growth on the Sun threaten to unravel alliances and plunge the System into war. Welcome to 1kSE.
 						</i></p>
